--- a/wxcloudrun/templates/base.html
+++ b/wxcloudrun/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>龙泉残疾人联合会</title>
- <link rel="stylesheet" href="{{ url_for('static', filename= '/css/bootstrap.min.css') }}">
+ <link rel="stylesheet" href="{{ url_for('static', filename= 'css/bootstrap.min.css') }}">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
