--- a/wxcloudrun/templates/kfssbz.html
+++ b/wxcloudrun/templates/kfssbz.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>龙泉残疾人联合会</title>
-   <link rel="stylesheet" type="text/css" href= "{{ url_for('static', filename = '/css/A4.css') }}">
+   <link rel="stylesheet" type="text/css" href= "{{ url_for('static', filename = 'css/A4.css') }}">
     <script src="{{url_for('static', filename='js/jquery-3.6.0.min.js')}}" ></script>
     <style>
 
